# JLT-toolkit

./: package.json  pnpm-lock.yaml  svelte.config.js
.cursor/rules/: project.mdc
.github/workflows/: publish.yml
src/: app.css
src-py/: ocr.py  pyproject.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src-py/: pyproject.toml
src/lib/: helper.ts
src/lib/apis/: api.ts
src/lib/components/: FileItem.svelte.ts  FileListItem.svelte  FileOpen.svelte  FileQueue.svelte  app-sidebar.svelte
src/lib/helpers/: auth.svelte.ts  auth.ts
src/lib/hooks/: useDragDrop.ts  useGlobalShortcut.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/flows/bill-ar/: +page.svelte
src/routes/flows/delivery-notice/: +page.svelte
src/routes/flows/extract-customer-po/: +page.svelte
src/routes/flows/fill-columns/: +page.svelte
src/routes/flows/outstock-detail/: +page.svelte
src/routes/flows/query-doc-type/: +page.svelte
src/routes/flows/test-file-queue/: +page.svelte
src/routes/login/: +page.svelte  schema.ts
src/routes/settings/: +page.svelte  section-api-channel.svelte  section-become.svelte  section-xky-credential.svelte
