[project]
name = "src-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marker-pdf[full]>=1.7.3",
    "onnxruntime>=1.22.0",
    "rapidocr>=2.1.0",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "nuitka>=2.7.3",
    "transformers>=4.52.3",
]
